--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1393,22 +1393,22 @@
 											</div>
 											<form name="contact" method="POST" netlify netlify-honeypot="bot-field">
 												<p>
-													<label>Your Name* <input type="text" name="name" /></label>
+													<label>Your Name* <input type="text" required name="name" /></label>
 												</p>
 												<p>
-													<label>Brand/Project Name:* <input type="text"
+													<label>Brand/Project Name:* <input required type="text"
 															name="brand" /></label>
 												</p>
 												<p>
-													<label>Position* <input type="text"
+													<label>Position* <input required type="text"
 															name="position" /></label>
 												</p>
 												<p>
-													<label>Twitter Handle:* <input type="text"
+													<label>Twitter Handle:* <input required type="text"
 															name="twitter" /></label>
 												</p>
 												<p>
-													<label>Your Email* <input type="email" name="email" /></label>
+													<label>Your Email* <input required type="email" name="email" /></label>
 												</p>
 
 											
