--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1391,24 +1391,24 @@
 													</p>
 												</form> -->
 											</div>
-											<form name="contact" method="POST" netlify netlify-honeypot="bot-field">
+											<form name="contact" method="POST" netlify data-netlify-recaptcha="true">
 												<p>
-													<label>Your Name* <input type="text" required name="name" /></label>
+													<label>Your Name* <input type="text"  name="name" /></label>
 												</p>
 												<p>
-													<label>Brand/Project Name:* <input required type="text"
+													<label>Brand/Project Name:* <input  type="text"
 															name="brand" /></label>
 												</p>
 												<p>
-													<label>Position* <input required type="text"
+													<label>Position* <input  type="text"
 															name="position" /></label>
 												</p>
 												<p>
-													<label>Twitter Handle:* <input required type="text"
+													<label>Twitter Handle:* <input  type="text"
 															name="twitter" /></label>
 												</p>
 												<p>
-													<label>Your Email* <input required type="email" name="email" /></label>
+													<label>Your Email* <input  type="email" name="email" /></label>
 												</p>
 
 											
