--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1391,33 +1391,30 @@
 													</p>
 												</form> -->
 											</div>
-											<form name="contact" method="POST" netlify data-netlify-recaptcha="true">
+											<form name="contact" method="POST" netlify >
 												<p>
-													<label>Your Name* <input type="text"  name="name" /></label>
+													<label>Your Name* <input type="text" name="name" /></label>
 												</p>
 												<p>
-													<label>Brand/Project Name:* <input  type="text"
+													<label>Brand/Project Name:* <input type="text"
 															name="brand" /></label>
 												</p>
 												<p>
-													<label>Position* <input  type="text"
-															name="position" /></label>
+													<label>Position* <input type="text" name="position" /></label>
 												</p>
 												<p>
-													<label>Twitter Handle:* <input  type="text"
-															name="twitter" /></label>
+													<label>Twitter Handle:* <input type="text" name="twitter" /></label>
 												</p>
 												<p>
-													<label>Your Email* <input  type="email" name="email" /></label>
+													<label>Your Email* <input type="email" name="email" /></label>
 												</p>
 
-											
 												<p>
-													<label>Website URL <input type="text"
-															name="website" /></label>
+													<label>Website URL <input type="text" name="website" /></label>
 												</p>
 												<p>
-													<label>Message <textarea rows="10" name="message"></textarea></label>
+													<label>Message <textarea rows="10"
+															name="message"></textarea></label>
 												</p>
 												<p>
 													<button type="submit">Send</button>
