--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1413,7 +1413,7 @@
 													<label>Website URL <input type="text" name="website" /></label>
 												</p>
 												<p>
-													<label>Message <textarea rows="10"
+													<label>Message <textarea minlength="20" rows="10"
 															name="message"></textarea></label>
 												</p>
 												<p>
