--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1391,7 +1391,7 @@
 													</p>
 												</form> -->
 											</div>
-											<form name="contact" method="POST" netlify >
+											<form name="contact" data-netlify-recaptcha="true" method="POST" netlify >
 												<p>
 													<label>Your Name* <input type="text" name="name" /></label>
 												</p>
