--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1417,7 +1417,7 @@
 															name="message"></textarea></label>
 												</p>
 												<p>
-													<button type="submit">Send</button>
+													<button type="submit">Submit Details</button>
 												</p>
 											</form>
 
